  information will be very useful because it will list
  all the strings which were updated or added. If you
  encounter a modified string, please look in the 
  reference (english) file to see if you existing
  translation is still valid and update if appropriate.

  [U] = updated, [+] = added, [-] = removed

  ====================================================

  15-01-2007 - settings
    [+] strCacheDirLockedDetected

  11-01-2007 - default
    [-] strRevCVS
    [+] strRevSVN

  16-10-2006 - default
    [+] strWarnClientDaysTxt
    [+] strCampaignExpiring

  16-10-2006 - settings
    [+] strWarnLimitDays
    [+] strWarnLimitDaysErr

  24-01-2006 - settings
    [+] strMysql4Compatibility

  06-07-2005 - default
    [+] strSwfTranparent

  05-06-2005 - default
    [-] strISP
    [-] strOrganization
    [+] strOrgISP

  05-05-2005 - default
    [-] strUSState
    [+] strUSCAState
    [+] strFIPSRegion
    [+] strCity
    [+] strPostalCode
    [+] strDMACode
    [+] strAreaCode
    [+] strOrganization
    [+] strISP
    [+] strNetSpeed
    [+] strLimitationDropped
    [+] strShowCountry
    [+] strShowAllCountries

  05-05-2005 - settings
    [+] strGeotrackingUnsupportedDB
    [+] strCookieSettings
    [+] strPackCookies

  04-24-2005 - default
    [+] strCollectedLastMonth
    [+] strCollectedYear
    [+] strCollectedLastYear

  02-22-2005 - settings
    [+] strRetry

  10-28-2003 - invocation
    [-] strPopUpTop
    [-] strPopUpLeft
    [+] strPopupInitialHPos
    [+] strPopupInitialVPos
    [+] strPopupFromLeft
    [+] strPopupFromRight
    [+] strPopupFromTop
    [+] strPopupFromBottom
    [+] strCentered

  10-13-2003 - settings
    [+] strAdminCheckDevBuilds

  08-19-2003 - settings
    [+] strWarningPHP5beta
    [+] strPhpBug24652

  07-29-2003 - default
    [+] strCollectedYesterday
    [+] strCollectedRange

  07-29-2003 - settings
    [u] strAdminFullName
    [u] strAdminEmail
    [u] strCompanyName

  07-28-2003 - settings
    [u] strLanguageSelection