@@ -105,7 +105,7 @@ while ($row = phpAds_dbFetchArray($res))
 		case phpAds_userDeliveryEngine:		echo "<img src='images/icon-generatecode.gif' align='absmiddle'>&nbsp;".$strDeliveryEngine; break;
 		case phpAds_userMaintenance:		echo "<img src='images/icon-time.gif' align='absmiddle'>&nbsp;".$strMaintenance; break;
 		case phpAds_userAdministrator:		echo "<img src='images/icon-client.gif' align='absmiddle'>&nbsp;".$strAdministrator; break;
-		case phpAds_userAutoMaintenance:	echo "<img src='images/warning.gif' align='absmiddle'>&nbsp;".'Automatic maintenance'; break;
+		case phpAds_userAutoMaintenance:	echo "<img src='images/warning.gif' align='absmiddle'>&nbsp;".$strAutoMaintenance; break;
 	}
 	echo "</td>";
 	
